--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,6 +37,16 @@
     <!-- Script -->
   </head>
   <body>
-    <h1>hahahihi</h1>
+    <h1>Danh Sách Bài Viết</h1>
+    <ul>
+      <% posts.forEach(post => { %>
+      <li>
+        <h2><%= post.title %></h2>
+        <p><%= post.summary %></p>
+        <!-- Thay 'summary' bằng cột phù hợp từ database -->
+        <p><small>Ngày đăng: <%= post.created_at %></small></p>
+      </li>
+      <% }); %>
+    </ul>
   </body>
 </html>
