--- a/src/resources/views/layouts/auth.hbs
+++ b/src/resources/views/layouts/auth.hbs
@@ -28,11 +28,11 @@
   </head>
   <body>
     <header>
-        {{> header}}
+        {{> authheader}}
     </header>
     {{{body}}}
     <footer>
-        {{> footer}}
+        {{> authfooter}}
     </footer>
   </body>
 </html>
