--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,12 +1,109 @@
 <div class="main">
   <div class="container">
-    <div class="row row-cols-2">
-      <div class="col">
-
-      </div>
-      <div class="col">
-        
-      </div>
-    </div>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium fugit
+    enim ex ducimus doloremque distinctio et eius nulla cumque! Enim beatae
+    accusamus, assumenda, odio voluptatum magni doloribus magnam porro,
+    distinctio unde omnis esse quasi sed! Voluptatum, cupiditate nesciunt
+    maiores id, ipsum delectus laborum nisi doloribus, distinctio provident non!
+    Nesciunt tempora eum doloremque, maiores quibusdam reprehenderit incidunt
+    necessitatibus. Est, quas voluptatum. Ab eligendi cum accusantium maiores
+    necessitatibus. Impedit sint ipsa dignissimos dolores animi, voluptate saepe
+    libero, quia voluptatibus natus distinctio exercitationem tempora labore
+    recusandae quaerat ipsam aliquid sequi dolor beatae, deleniti culpa iste
+    accusamus blanditiis soluta. Repudiandae dolorum fugiat adipisci reiciendis
+    quibusdam? Alias quae sunt maiores debitis delectus, aspernatur deserunt
+    doloremque ex nostrum voluptatibus quibusdam nobis corporis illo. Ex qui
+    placeat illum, reprehenderit vero nisi. Pariatur omnis fuga incidunt aperiam
+    enim sequi earum modi et qui, veritatis eligendi libero nam deleniti
+    consequuntur, hic excepturi ab iusto at quae. Repudiandae exercitationem
+    sint reiciendis non, alias placeat doloribus tempora, veritatis iusto
+    nostrum ullam dicta, obcaecati perspiciatis. Ducimus, magni dolorum facilis,
+    iure praesentium impedit nesciunt blanditiis, aspernatur quibusdam dolorem
+    nobis tempore voluptas rem doloribus aliquam distinctio sapiente. Laborum,
+    provident ipsa aliquam, reprehenderit accusantium dicta dolores suscipit
+    voluptatibus nisi amet neque sed. Recusandae nemo illo, dolore accusantium
+    sed assumenda facere earum! Laudantium, vitae rerum? Sint eos sit voluptatem
+    exercitationem voluptate quae at saepe nobis amet ratione, quod aperiam
+    recusandae porro repellat optio nam illum qui incidunt, tenetur provident
+    iste similique odio? Vel ab beatae accusantium repudiandae, nobis similique
+    dignissimos aliquid doloremque perferendis officia cumque, necessitatibus
+    quo expedita fugiat consequatur ipsa fuga itaque mollitia veniam obcaecati
+    libero sint corrupti? Placeat, in porro iste veniam, quasi inventore
+    sapiente labore illo totam nulla soluta quaerat atque voluptatem aut harum
+    ducimus, reprehenderit incidunt saepe iure quos modi enim beatae natus?
+    Nobis sequi necessitatibus tempore saepe illum quis! Qui atque ab corporis
+    vero eaque nulla, sed ullam doloremque itaque deleniti ducimus quae error,
+    ipsam neque amet, quam quas esse magni fugiat ad fugit ut magnam! Obcaecati
+    nesciunt ipsum commodi autem, eum non accusamus? Nihil reprehenderit
+    voluptate mollitia, autem laboriosam unde molestiae dignissimos doloribus
+    cum accusamus. Veniam libero illo eius? Optio vero ipsam asperiores nemo
+    fugiat, corrupti iusto praesentium temporibus a exercitationem hic ex
+    doloribus itaque molestiae quas. Cupiditate esse pariatur quas tenetur
+    dolorum unde, et possimus amet, fugiat, magni alias ab. Modi reiciendis
+    soluta eos ex non! Quisquam, reprehenderit? Aliquam, quasi a. Aspernatur,
+    cumque voluptates sint enim dicta, eum ducimus dolorem nihil suscipit
+    nostrum, ab error modi pariatur dolor animi accusantium earum laboriosam
+    assumenda non distinctio quis voluptatibus? Dicta ex quia harum doloremque
+    adipisci quas pariatur corrupti perspiciatis et, quae quis vitae vero in
+    omnis atque, dolores voluptatem nihil! Obcaecati reprehenderit veniam
+    aliquam illo minima cumque eligendi porro deleniti suscipit modi reiciendis,
+    facere quae et asperiores consectetur veritatis sunt fugiat impedit, sint
+    perferendis autem? Similique alias veritatis esse, assumenda reiciendis
+    architecto numquam nam repudiandae obcaecati corporis inventore nihil rerum
+    quaerat perferendis explicabo veniam facere, doloribus culpa tenetur,
+    molestias pariatur ex aspernatur sint! Ipsam dolores sapiente rem reiciendis
+    dolorem adipisci alias dolorum temporibus voluptatem ut consequatur sit a
+    repellat quos fuga facilis doloribus expedita iusto sunt ducimus esse,
+    commodi iure! Vitae veritatis laborum est sapiente sequi, harum laboriosam
+    doloremque consectetur magnam repellendus ad, quaerat, dolores quibusdam
+    error a soluta accusantium sit eaque architecto labore nemo in atque
+    reprehenderit? Officia perferendis et eius quidem ab odit eum dolore cumque
+    sapiente, doloribus fuga sequi harum excepturi doloremque inventore
+    accusamus debitis ad. Quae, pariatur! Impedit dolor odit natus laudantium
+    veritatis consequatur harum doloremque dolores, a explicabo numquam
+    necessitatibus. Ad ea, similique tenetur praesentium eveniet doloribus sunt
+    porro iusto quas. Dignissimos, enim. Officiis sequi cumque amet, quae
+    expedita magnam dignissimos nostrum odit ipsum rerum ducimus aliquam aut
+    consequatur aperiam suscipit praesentium incidunt numquam! Dignissimos
+    similique saepe adipisci quis eligendi quasi sed nobis suscipit est commodi
+    explicabo illo deleniti distinctio voluptate voluptas, natus, minima
+    voluptatem eos? Earum ad tempore facilis ut, inventore autem eveniet
+    reprehenderit labore voluptatem maxime veniam saepe. Iure veniam
+    accusantium, voluptatem voluptate dolor debitis eligendi in ab distinctio
+    qui consequatur quisquam eum quae voluptas impedit, animi, laboriosam magni.
+    Molestiae eaque veritatis ex culpa. Praesentium dolorem, molestiae aut
+    officiis deleniti repellat voluptatibus autem! Blanditiis, exercitationem?
+    Modi magnam ipsam nulla, consequatur at tempore aperiam. Est, facere eaque!
+    Laboriosam recusandae facilis nulla, natus asperiores commodi perspiciatis
+    dolorum nihil, aperiam voluptatum cupiditate similique ex vero et ea
+    placeat. Quas, itaque, consequuntur ex dolorum quaerat facilis ab, aperiam
+    voluptatum officia ullam consequatur id doloribus vel distinctio asperiores
+    nobis magni. Fuga recusandae nihil, accusamus commodi voluptate, eum
+    perspiciatis blanditiis aperiam sequi, voluptates nulla necessitatibus
+    facere aliquid eius iusto quaerat iure amet dignissimos. Neque illo
+    cupiditate cum esse nesciunt accusantium. At, quam ipsum ad culpa aspernatur
+    magni nam odio quidem amet nobis voluptatem nesciunt nisi unde assumenda ab
+    incidunt delectus, porro quaerat aliquid pariatur quo neque? Voluptatem,
+    voluptate. Enim totam fugit excepturi recusandae saepe asperiores at! Fuga
+    laborum iusto vero, rem aliquid quas, dicta illum corrupti fugiat nobis
+    dolorem molestiae eum eligendi quaerat. Nulla soluta rerum consequuntur, vel
+    perspiciatis vero et fuga sapiente magni natus mollitia commodi obcaecati
+    odio veritatis blanditiis. Excepturi consectetur et pariatur expedita qui
+    nisi, fugiat saepe officia sed voluptates repellat facere aut enim omnis.
+    Nostrum itaque dicta quae, quisquam eos ab minima enim eum rem, odio ad
+    numquam necessitatibus ipsum, praesentium mollitia dolores commodi fugiat
+    quod sunt distinctio! Voluptate eligendi illum dolore omnis ab perferendis,
+    explicabo sunt quasi temporibus? Unde exercitationem, mollitia voluptatum
+    eaque animi sed, ab corrupti non nam, veniam optio? Unde aspernatur deleniti
+    qui voluptatum architecto? Possimus impedit minus accusantium, dolore
+    molestias laboriosam a, amet odit expedita in ducimus, consequuntur officia!
+    Mollitia, laborum labore suscipit, consectetur ut maxime impedit quo libero
+    eligendi aliquam magni laudantium alias facere rerum accusantium
+    reprehenderit. Laborum autem voluptate itaque atque nostrum necessitatibus
+    omnis eos, vel, dolore sapiente odio! Deleniti culpa fugit incidunt aut
+    consectetur omnis suscipit provident. Error eaque voluptas ipsa accusantium
+    totam repellat hic ea quibusdam placeat ut velit, quas esse animi iusto
+    praesentium, recusandae cupiditate quae ducimus non eligendi. Laboriosam
+    commodi officiis sapiente, praesentium molestias quisquam nemo.
   </div>
 </div>
