--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -24,15 +24,15 @@
     <!-- Css -->
     <link rel="stylesheet" href="/assets/css/main.css" />
     <!-- Script -->
-    <script src="./assets/js/main.js"></script>
   </head>
   <body>
     <header>
         {{> header}}
     </header>
-    {{{body}}}
+    {{!-- {{{body}}} --}}
     <footer>
         {{> footer}}
     </footer>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
