--- a/src/resources/scss/base/_keyframes.scss
+++ b/src/resources/scss/base/_keyframes.scss
@@ -1,13 +1,8 @@
-@keyframes shake {
-    0%,
-    100% {
-        translate: 0;
+@keyframes background {
+    from {
+      background-position: 0 0%;
     }
-    25%,
-    75% {
-        translate: 4px;
+    to {
+      background-position: 0 -200px;
     }
-    50% {
-        translate: -4px;
-    }
-}
+  }
