--- a/src/resources/views/partials/authHeader.hbs
+++ b/src/resources/views/partials/authHeader.hbs
@@ -1,5 +1,5 @@
-<div class="header">
+<div class="authHeader">
   <div class="container">
-    <div class="brach"><h1>RISES</h1></div>
+    <div class="branch"><h1>RISES</h1></div>
   </div>
 </div>
