--- a/src/resources/scss/base/_keyframes.scss
+++ b/src/resources/scss/base/_keyframes.scss
@@ -6,3 +6,14 @@
       background-position: 0 -200px;
     }
   }
+
+  @keyframes move{
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+}
