--- a/src/resources/views/layouts/auth.hbs
+++ b/src/resources/views/layouts/auth.hbs
@@ -21,18 +21,19 @@
     <!-- Font -->
     <link rel="stylesheet" href="/assets/font/PlayfairDisplay/stylesheet.css" />
     <link rel="stylesheet" href="/assets/font/SourceSansPro/stylesheet.css" />
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Css -->
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <!-- Script -->
-    <script src="./assets/js/main.js"></script>
   </head>
   <body>
     <header>
-        {{> authheader}}
+        {{> authHeader}}
     </header>
     {{{body}}}
     <footer>
-        {{> authfooter}}
+        {{> authFooter}}
     </footer>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
