--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,6 +21,8 @@
     <!-- Font -->
     <link rel="stylesheet" href="/assets/font/PlayfairDisplay/stylesheet.css" />
     <link rel="stylesheet" href="/assets/font/SourceSansPro/stylesheet.css" />
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Css -->
     <link rel="stylesheet" href="/assets/css/main.css" />
     <!-- Script -->
