--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -2,61 +2,61 @@
     <div class="container">
         <div class="header__top">
             <div class="row">
-           <div class="col-2">
-                <div class="des-current-day">
-                    <div class="weather">
-                        <img src="https://static.mediacdn.vn/images/icon_weather/nhieu-may.png
-        " alt="cloud" class="weather__img"></img>
-                        <span class="weather__des">28°C Hồ Chí Minh</span>
+                <div class="col-2">
+                        <div class="des-current-day">
+                            <div class="weather">
+                                <img src="https://static.mediacdn.vn/images/icon_weather/nhieu-may.png
+                " alt="cloud" class="weather__img"></img>
+                                <span class="weather__des">28°C Hồ Chí Minh</span>
+                            </div>
+                            <div class="day-month-year">
+                                <span class="day">Wednesday</span>
+                                <span class="date">20</span>
+                                <span>/</span>
+                                <span class="month">11</span>
+                                <span>/</span>
+                                <span class="year">2024</span>
+                            </div>
                     </div>
-                    <div class="day-month-year">
-                        <span class="day">Wednesday</span>
-                        <span class="date">20</span>
-                        <span>/</span>
-                        <span class="month">11</span>
-                        <span>/</span>
-                        <span class="year">2024</span>
-                    </div>
-               </div>
-           </div>
-        <div class="col-1">
-                <div class="logo">
-                    <img src="/assets/img/logo/Đời Sống.png" alt="" class="logo__img">
                 </div>
-        </div>
-           <div class="col-4">
-                <div class="search">
-                   <form class="form__header">
-                        <input class="search__input" type="text" name="" id="" placeholder="Search">
-                   </form>        
-                   <img src="/assets/icons/search.svg" class="search__icon"></img>
+                <div class="col-1 ">
+                            <div class="logo">
+                                <img src="/assets/img/logo/rises.png" alt="" class="logo__img">
+                            </div>
                 </div>
-           </div>
-            <div class="col-3">
-                <div class="social">
-                    <a href="">
-                        <img src="/assets/icons/twitter.svg" alt="twitter" title="Twitter" class="social__icon social__twitter">
-                    </a>
-                    <a href="">
-                        <img src="/assets/icons/facebook.svg" alt="facebook" title="Facebook" class="social__icon social__facebook">
-                    </a>
-                    <a href="">
-                        <img src="/assets/icons/linkedin.svg" alt="linkedin" title="Linkedin" class="social__icon social__linkedin">
-                    </a>
-                    <a href="">
-                        <img src="/assets/icons/instagram.svg" alt="instagram" title="Instagram" class="social__icon social__instagram">
-                    </a>
-                    <a href="">
-                        <img src="/assets/icons/youtube.svg" alt="youtube" title="Youtube" class="social__icon social__youtube">
-                    </a>
+                <div class="col-4">
+                        <div class="search">
+                        <form class="form__header">
+                                <input class="search__input" type="text" name="" id="" placeholder="Search">
+                        </form>        
+                        <img src="/assets/icons/search.svg" class="search__icon"></img>
+                        </div>
                 </div>
-            </div>
-           <div class="col-2">
-                <div class="action">
-                    <a href="#!" class="action__auth action__signup">Sign Up</a>
-                    <a href="#!" class="action__auth action__signin">Login</a>
+                <div class="col-3">
+                        <div class="social">
+                            <a href="">
+                                <img src="/assets/icons/twitter.svg" alt="twitter" title="Twitter" class="social__icon social__twitter">
+                            </a>
+                            <a href="">
+                                <img src="/assets/icons/facebook.svg" alt="facebook" title="Facebook" class="social__icon social__facebook">
+                            </a>
+                            <a href="">
+                                <img src="/assets/icons/linkedin.svg" alt="linkedin" title="Linkedin" class="social__icon social__linkedin">
+                            </a>
+                            <a href="">
+                                <img src="/assets/icons/instagram.svg" alt="instagram" title="Instagram" class="social__icon social__instagram">
+                            </a>
+                            <a href="">
+                                <img src="/assets/icons/youtube.svg" alt="youtube" title="Youtube" class="social__icon social__youtube">
+                            </a>
+                        </div>
                 </div>
-           </div>
+                <div class="col-2">
+                        <div class="action">
+                            <a href="#!" class="action__auth action__signup">Sign Up</a>
+                            <a href="#!" class="action__auth action__signin">Login</a>
+                        </div>
+                </div>
             </div>
         </div>
         <nav class="nav-header">
