--- a/src/resources/scss/theme/_dark.scss
+++ b/src/resources/scss/theme/_dark.scss
@@ -2,4 +2,7 @@
 
 html.dark {
   --navControlBG: hsl(128, 63%, 45%);
+  --authBG : rgb(53, 53, 53);// chinh lai
+  --authButton : rgb(53,53,53); // chinh lai
+  --authBGLINEAR : #33353d;
 }
