--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -67,7 +67,7 @@
               <img src="https://static.mediacdn.vn/nld.com.vn/image/icon-google-play.svg" alt="Download" title="Download" width="125" height="39" loading="lazy">
             </a>
             <div class="change-theme">
-              {{!-- <input class="theme-toggle" type='checkbox'> --}}
+              <input class="theme-toggle" type='checkbox'>
             </div>
           </div>
         </div>
